<resources>
    <string name="app_name">Calculator</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="DELETE">DELETE</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="plus">+</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="minus">-</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="multiple">*</string>
    <string name="n0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sec">/</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="percentage">%</string>
</resources>