<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
 
    <TextView
        android:id="@+id/txtsolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:id="@+id/matrix_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/numCE"
            android:text="@string/CE" />

        <Button
            android:id="@+id/numC"
            android:text="@string/C" />

        <Button
            android:id="@+id/parentheses_o"
            android:text="@string/open" />

        <Button
            android:id="@+id/percentage"
            android:text="@string/percentage" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/n7"
            android:text="@string/n7" />

        <Button
            android:id="@+id/n8"
            android:text="@string/n8" />

        <Button
            android:id="@+id/n9"
            android:text="@string/n9" />

        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/n4"
            android:text="@string/n4" />

        <Button
            android:id="@+id/n5"
            android:text="@string/n5" />

        <Button
            android:id="@+id/n6"
            android:text="@string/n6" />

        <Button
            android:id="@+id/minus"
            android:text="@string/minus" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/n1"
            android:text="@string/n1" />

        <Button
            android:id="@+id/n2"
            android:text="@string/n2" />

        <Button
            android:id="@+id/n3"
            android:text="@string/n3" />

        <Button
            android:id="@+id/multiple"
            android:text="@string/multiple" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/zero"
            android:text="@string/n0" />

        <Button
            android:id="@+id/dot"
            android:text="@string/dot" />

        <Button
            android:id="@+id/equal"
            android:text="@string/equal" />

        <Button
            android:id="@+id/sec"
            android:text="@string/sec" />
    </TableRow>
</TableLayout>
